--- a/css/main.less
+++ b/css/main.less
@@ -26,14 +26,12 @@ header {
 		float: left;
 		font-weight: bold;
 		padding-left: 8px;
-		a {
-			h1 {
-				color: @colorTitle;
-				font-size: 30px;
-				line-height: 26px;
-				span {
-					color: #ae4b5d;
-				}
+		h1 {
+			color: @colorTitle;
+			font-size: 30px;
+			line-height: 26px;
+			span {
+				color: #ae4b5d;
 			}
 		}
 		p {
@@ -43,6 +41,7 @@ header {
 		}
 	}
 	.search {
+		position: relative;
 		float: right;
 		form {
 			input[type=text] {
@@ -71,20 +70,26 @@ header {
 				background-position: 50% 50%;
 				border: 0;
 				background-color: #ae4b5d;
-				transition: all 0.5s ease 0s;
-				-webkit-transition: all 0.5s;
-     			-moz-transition: all 0.5s;
-     			-o-transition: all 0.5s;
+				transition: color 0.5s;
+				-webkit-transition: color 0.5s;
+     			-moz-transition: color 0.5s;
+     			-o-transition: color 0.5s;
      			&:hover {
 					background-color: darken(#ae4b5d, 15%);
 					cursor: pointer;
 					outline: none;
 				}
-
 			}
 		}
 	}
+	.menu_icon {
+		display: none;
+		svg g {
+			fill: #ae4b5d;;
+		}
+	}
 }
+	
 .info {
 	background-color: #e1e2e5;
 	.container {
@@ -93,7 +98,7 @@ header {
 			background: url('../img/bg.jpg');
 			background-repeat: no-repeat;
 			background-size: cover;
-			padding: 45px 0 40px 40px;
+			padding: 45px 26px 40px 40px;
 			h2 {
 				font-size: 30px;
 				font-weight: bold;
@@ -278,8 +283,7 @@ header {
 			}
 		}
 		.service_info {
-			max-width: 700px;
-			width: 100%;
+			 max-width: 700px; 
 			float: left;
 			.service_title {
 				max-width: inherit;
@@ -337,9 +341,11 @@ header {
 						font-size: 14px;
 						font-weight: normal;
 						margin-bottom: 10px;
+						text-shadow: 0px 0px 1px #bec1c4;
 						span {
 							background-color: #dedede;
 							border-radius: 3px;
+							text-shadow: 0;
 						}
 					}
 					ul {
@@ -466,9 +472,10 @@ footer {
 				padding-left: 5px;
 				list-style-type: none;
 				li {
-					height: 16px;
+					height: auto;
 					background: url('../img/hour.png') no-repeat left center;;
 					padding-left: 25px;
+					padding-top: 2px;
 					margin-bottom: 10px;
 				}
 			}
@@ -497,6 +504,225 @@ footer {
 			}
 		}
 		.contact_info:last-child {
+			margin-right: 0 !important;
+		}
+	}
+}
+
+@media only screen and (min-width: 768px) and (max-width: 978px) {
+	header {
+		.container {
+			padding-right: 20px;
+			padding-left: 20px;
+		}
+	}
+	.services {
+		.container {
+			.service_info {
+				float: none;
+				.list_info {
+					margin-top: 50px;
+					padding-left: 16px;
+				}
+				.table_info {
+					padding-left: 16px;
+				}
+			}
+		}
+	}
+	footer {
+		.container {
+			padding-left: 20px;
+			.contact_info {
+				margin-right: 10px;
+				width: 32%;
+			}
+			.contact_info:last-child {
+				margin-right: 0;
+			}
+		}
+	}
+}
+
+@media only screen and (min-width: 481px) and (max-width: 767px) {
+	header {
+		.container {
+			width: 100%;
+			padding-left: 26px;
+			padding-right: 26px;
+			.search {
+				display: none;
+			}
+			.menu_icon {
+				display: block;
+				position: absolute;
+				top: 24px;
+				right: 26px;
+			}
+		} 
+	}
+	.info {
+		.titles {
+			padding-right: 120px !important;
+		}
+		nav {
+			display: none;
+		}
+		.mob_menu {
+			display: block;
+			position: absolute;
+			float: none;
+			top: 65px;
+			left: 0;
+			width: 100%;
+			padding: 0 !important;
+			background: rgba(174, 75, 93, 0.9);
+			ul {
+				float: none !important;
+				li {
+					display: block !important;
+					padding: 15px 0!important;
+					text-align: center;
+					border-top: 1px solid #a5adb8;
+
+				}
+				li:hover {
+					background: rgba(40, 45, 50, 0.9);
+				}
+				
+			}
+		}
+	}
+	.services {
+		.container {
+			display: flex;
+			flex-flow: wrap;
+			padding-right: 26px;
+			.contact_form {
+				margin: 30px auto;
+				float: none;
+				order: 2;
+				width: auto;
+				text-align: center;
+			}
+			.service_info {
+				padding-left: 26px;
+				order: 1;
+				float: none;
+			}
+		}
+	}
+	footer {
+		text-align: center;
+		.contact_info {
+			margin-top: 25px;
+			margin-right: 0px!important;
+			padding-left: 26px;
+			padding-right: 26px;
+		}
+	}
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+	header {
+		padding-left: 26px;
+		padding-right: 26px;
+		.logo {
+			float: none;
+			padding: 0;	
+		}
+		.search {
+			display: none;
+		}
+		.menu_icon {
+			display: block;
+			position: absolute;
+			top: 24px;
+			right: 26px;
+		}
+	}
+	.info {
+		.container { 
+			.titles {
+				padding-left: 26px !important;
+				padding-right: 26px !important;
+			}
+			nav {
+				display: none;
+			}
+			.mob_menu {
+				display: block;
+				position: absolute;
+				top: 65px;
+				left: 0;
+				width: 100%;
+				padding: 0;
+				ul {
+					float: none;
+					li {
+						display: block !important;
+						padding: 15px 0!important;
+						text-align: center;
+						border-top: 1px solid #a5adb8;
+
+					}
+					li:hover {
+						background: rgba(40, 45, 50, 0.9);
+					}
+					
+				}
+			}
+		}
+	}
+	.services {
+		.container {
+			.contact_form {
+				float: none;
+				margin: 0 auto;
+				width: 90%;
+				text-align: center;
+				form {
+					width: 100%;
+					margin: 0;
+				}
+				.article {
+					text-align: left;
+				}
+			}
+			.service_info {
+				float: none;
+				margin-top: 40px;
+				padding-left: 16px;
+			}
+			.list_info {
+				margin-top: 30px;
+			}
+			.table_info {
+				margin: 0 auto;
+				table {
+					width: 100%;
+					table-layout: fixed;
+					th {
+						padding: 5px !important;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						overflow: hidden;
+					}
+					td {
+						padding: 5px !important;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						overflow: hidden;
+					}
+				}
+			}
+		}
+	}
+	footer {
+		text-align: center;
+		.contact_info {
+			margin-top: 25px;
+			display: block;
 			margin-right: 0 !important;
 		}
 	}
